==> atomvm/AtomVM/src/platforms/stm32/src/lib/uart_driver.c <==
#include <stdbool.h>
#include <stdlib.h>
#include <string.h>
#include "stm32_hal_platform.h"
#include <context.h>
#include <defaultatoms.h>
#include <erl_nif.h>
#include <erl_nif_priv.h>
#include <globalcontext.h>
#include <interop.h>
#include <memory.h>
#include <nifs.h>
#include <term.h>
#include <trace.h>
#include "avm_log.h"
#include "stm_sys.h"
#define TAG "uart_driver"

static term nif_uart_init(Context *ctx, int argc, term argv[])
{
    UNUSED(argc);
    term opts = argv[0];
    VALIDATE_VALUE(opts, term_is_list);

    GlobalContext *glb = ctx->global;

    static const char *const peripheral_str = ATOM_STR("\xA", "peripheral");
    static const char *const tx_str = ATOM_STR("\x2", "tx");
    static const char *const rx_str = ATOM_STR("\x2", "rx");
    static const char *const speed_str = ATOM_STR("\x5", "speed");
    static const char *const data_bits_str = ATOM_STR("\x9", "data_bits");
    static const char *const stop_bits_str = ATOM_STR("\x9", "stop_bits");
    static const char *const parity_str = ATOM_STR("\x6", "parity");
    static const char *const af_str = ATOM_STR("\x2", "af");

    term peripheral_term = interop_kv_get_value_default(opts, peripheral_str, term_from_int(1), glb);
    term tx_term = interop_kv_get_value(opts, tx_str, glb);
    term rx_term = interop_kv_get_value(opts, rx_str, glb);
    term speed_term = interop_kv_get_value_default(opts, speed_str, term_from_int(115200), glb);
    term data_bits_term = interop_kv_get_value_default(opts, data_bits_str, term_from_int(8), glb);
    term stop_bits_term = interop_kv_get_value_default(opts, stop_bits_str, term_from_int(1), glb);
    term parity_term = interop_kv_get_value_default(opts, parity_str, term_from_int(0), glb);
    term af_term = interop_kv_get_value_default(opts, af_str, term_from_int(7), glb);

    if (term_is_invalid_term(tx_term) || term_is_invalid_term(rx_term)) {
        AVM_LOGE(TAG, "tx and rx pins are required");
        RAISE_ERROR(BADARG_ATOM);
    }

    VALIDATE_VALUE(peripheral_term, term_is_integer);
    VALIDATE_VALUE(speed_term, term_is_integer);
    VALIDATE_VALUE(data_bits_term, term_is_integer);
    VALIDATE_VALUE(stop_bits_term, term_is_integer);
    VALIDATE_VALUE(parity_term, term_is_integer);
    VALIDATE_VALUE(af_term, term_is_integer);

    int peripheral = term_to_int(peripheral_term);
    uint32_t speed = (uint32_t) term_to_int(speed_term);
    int data_bits = term_to_int(data_bits_term);
    int stop_bits = term_to_int(stop_bits_term);
    int parity = term_to_int(parity_term);
    uint32_t af = (uint32_t) term_to_int(af_term);

    USART_TypeDef *instance = peripheral_to_instance(peripheral);
    if (IS_NULL_PTR(instance)) {
        AVM_LOGE(TAG, "Invalid UART peripheral: %d", peripheral);
        RAISE_ERROR(BADARG_ATOM);
    }

    GPIO_TypeDef *tx_port;
    uint16_t tx_pin;
    if (!parse_pin(glb, tx_term, &tx_port, &tx_pin)) {
        AVM_LOGE(TAG, "Invalid TX pin");
        RAISE_ERROR(BADARG_ATOM);
    }

    GPIO_TypeDef *rx_port;
    uint16_t rx_pin;
    if (!parse_pin(glb, rx_term, &rx_port, &rx_pin)) {
        AVM_LOGE(TAG, "Invalid RX pin");
        RAISE_ERROR(BADARG_ATOM);
    }

    enable_uart_clock(peripheral);

    GPIO_InitTypeDef gpio_init = {
        .Mode = GPIO_MODE_AF_PP,
        .Pull = GPIO_PULLUP,
        .Speed = GPIO_SPEED_FREQ_HIGH,
        .Alternate = af,
    };
    gpio_init.Pin = tx_pin;
    HAL_GPIO_Init(tx_port, &gpio_init);
    gpio_init.Pin = rx_pin;
    gpio_init.Mode = GPIO_MODE_AF_PP;
    HAL_GPIO_Init(rx_port, &gpio_init);

    struct UARTResource *rsrc_obj = enif_alloc_resource(uart_resource_type, sizeof(struct UARTResource));
    if (IS_NULL_PTR(rsrc_obj)) {
        RAISE_ERROR(OUT_OF_MEMORY_ATOM);
    }

    memset(&rsrc_obj->handle, 0, sizeof(UART_HandleTypeDef));
    rsrc_obj->handle.Instance = instance;
    rsrc_obj->is_half_duplex = false;

    rsrc_obj->handle.Init.BaudRate = speed;

    switch (data_bits) {
#ifdef UART_WORDLENGTH_7B
        case 7:
            rsrc_obj->handle.Init.WordLength = UART_WORDLENGTH_7B;
            break;
#endif
        case 8:
            rsrc_obj->handle.Init.WordLength = UART_WORDLENGTH_8B;
            break;
        case 9:
            rsrc_obj->handle.Init.WordLength = UART_WORDLENGTH_9B;
            break;
        default:
            rsrc_obj->handle.Init.WordLength = UART_WORDLENGTH_8B;
            break;
    }

    switch (stop_bits) {
        case 1:
            rsrc_obj->handle.Init.StopBits = UART_STOPBITS_1;
            break;
        case 2:
            rsrc_obj->handle.Init.StopBits = UART_STOPBITS_2;
            break;
        default:
            rsrc_obj->handle.Init.StopBits = UART_STOPBITS_1;
            break;
    }

    switch (parity) {
        case 0:
            rsrc_obj->handle.Init.Parity = UART_PARITY_NONE;
            break;
        case 1:
            rsrc_obj->handle.Init.Parity = UART_PARITY_ODD;
            break;
        case 2:
            rsrc_obj->handle.Init.Parity = UART_PARITY_EVEN;
            break;
        default:
            rsrc_obj->handle.Init.Parity = UART_PARITY_NONE;
            break;
    }

    rsrc_obj->handle.Init.Mode = UART_MODE_TX_RX;
    rsrc_obj->handle.Init.HwFlowCtl = UART_HWCONTROL_NONE;
    rsrc_obj->handle.Init.OverSampling = UART_OVERSAMPLING_16;

    HAL_StatusTypeDef status = HAL_UART_Init(&rsrc_obj->handle);
    if (status != HAL_OK) {
        enif_release_resource(rsrc_obj);
        AVM_LOGE(TAG, "HAL_UART_Init failed: %d", (int) status);
        if (UNLIKELY(memory_ensure_free(ctx, TUPLE_SIZE(2)) != MEMORY_GC_OK)) {
            RAISE_ERROR(OUT_OF_MEMORY_ATOM);
        }
        return create_pair(ctx, ERROR_ATOM, globalcontext_make_atom(glb, ATOM_STR("\x9", "uart_init")));
    }

    if (UNLIKELY(memory_ensure_free(ctx, TERM_BOXED_RESOURCE_SIZE) != MEMORY_GC_OK)) {
        HAL_UART_DeInit(&rsrc_obj->handle);
        enif_release_resource(rsrc_obj);
        RAISE_ERROR(OUT_OF_MEMORY_ATOM);
    }

    term obj = term_from_resource(rsrc_obj, &ctx->heap);
    enif_release_resource(rsrc_obj);

    if (UNLIKELY(memory_ensure_free_with_roots(ctx, TUPLE_SIZE(2), 1, &obj, MEMORY_CAN_SHRINK) != MEMORY_GC_OK)) {
        RAISE_ERROR(OUT_OF_MEMORY_ATOM);
    }

    return create_pair(ctx, OK_ATOM, obj);
}

static term nif_uart_write(Context *ctx, int argc, term argv[])
{
    UNUSED(argc);
    struct UARTResource *rsrc_obj;
    if (UNLIKELY(!get_uart_resource(ctx, argv[0], &rsrc_obj))) {
        RAISE_ERROR(BADARG_ATOM);
    }
    if (IS_NULL_PTR(rsrc_obj->handle.Instance)) {
        RAISE_ERROR(BADARG_ATOM);
    }
    VALIDATE_VALUE(argv[1], term_is_binary);

    const uint8_t *data = (const uint8_t *) term_binary_data(argv[1]);
    size_t len = term_binary_size(argv[1]);
    uint32_t timeout_ms;
    if (UNLIKELY(!get_timeout_ms(argv[2], &timeout_ms))) {
        RAISE_ERROR(BADARG_ATOM);
    }
    if (UNLIKELY(len > UINT16_MAX)) {
        RAISE_ERROR(BADARG_ATOM);
    }

    HAL_StatusTypeDef status = HAL_UART_Transmit(&rsrc_obj->handle, (uint8_t *) data, (uint16_t) len, timeout_ms);
    if (UNLIKELY(status != HAL_OK)) {
        if (UNLIKELY(memory_ensure_free(ctx, TUPLE_SIZE(2)) != MEMORY_GC_OK)) {
            RAISE_ERROR(OUT_OF_MEMORY_ATOM);
        }
        return hal_status_to_error(ctx, status);
    }
    return term_from_int((int) len);
}

static term nif_uart_read(Context *ctx, int argc, term argv[])
{
    UNUSED(argc);
    struct UARTResource *rsrc_obj;
    if (UNLIKELY(!get_uart_resource(ctx, argv[0], &rsrc_obj))) {
        RAISE_ERROR(BADARG_ATOM);
    }
    if (IS_NULL_PTR(rsrc_obj->handle.Instance)) {
        RAISE_ERROR(BADARG_ATOM);
    }
    VALIDATE_VALUE(argv[1], term_is_integer);
    avm_int_t count = term_to_int(argv[1]);
    uint32_t timeout_ms;
    if (UNLIKELY(!get_timeout_ms(argv[2], &timeout_ms))) {
        RAISE_ERROR(BADARG_ATOM);
    }
    if (UNLIKELY(count < 0 || count > UINT16_MAX)) {
        RAISE_ERROR(BADARG_ATOM);
    }

    if (UNLIKELY(memory_ensure_free_opt(ctx, TUPLE_SIZE(2) + term_binary_heap_size(count), MEMORY_NO_GC) != MEMORY_GC_OK)) {
        RAISE_ERROR(OUT_OF_MEMORY_ATOM);
    }

    term data = term_create_uninitialized_binary(count, &ctx->heap, ctx->global);
    uint8_t *buf = (uint8_t *) term_binary_data(data);

    HAL_StatusTypeDef status = HAL_UART_Receive(&rsrc_obj->handle, buf, (uint16_t) count, timeout_ms);
    if (UNLIKELY(status != HAL_OK)) {
        if (UNLIKELY(memory_ensure_free(ctx, TUPLE_SIZE(2)) != MEMORY_GC_OK)) {
            RAISE_ERROR(OUT_OF_MEMORY_ATOM);
        }
        return hal_status_to_error(ctx, status);
    }

    return create_pair(ctx, OK_ATOM, data);
}

static term nif_uart_get_state(Context *ctx, int argc, term argv[])
{
    UNUSED(argc);
    struct UARTResource *rsrc_obj;
    if (UNLIKELY(!get_uart_resource(ctx, argv[0], &rsrc_obj))) {
        RAISE_ERROR(BADARG_ATOM);
    }
    if (IS_NULL_PTR(rsrc_obj->handle.Instance)) {
        RAISE_ERROR(BADARG_ATOM);
    }

    HAL_UART_StateTypeDef state = HAL_UART_GetState(&rsrc_obj->handle);

    static const char *const ready_str = ATOM_STR("\x5", "ready");
    static const char *const busy_str = ATOM_STR("\x4", "busy");
    static const char *const busy_tx_str = ATOM_STR("\x7", "busy_tx");
    static const char *const busy_rx_str = ATOM_STR("\x7", "busy_rx");
    static const char *const busy_tx_rx_str = ATOM_STR("\xA", "busy_tx_rx");
    static const char *const reset_str = ATOM_STR("\x5", "reset");

    const char *state_str;
    switch (state) {
        case HAL_UART_STATE_READY:
            state_str = ready_str;
            break;
        case HAL_UART_STATE_BUSY:
            state_str = busy_str;
            break;
        case HAL_UART_STATE_BUSY_TX:
            state_str = busy_tx_str;
            break;
        case HAL_UART_STATE_BUSY_RX:
            state_str = busy_rx_str;
            break;
        case HAL_UART_STATE_BUSY_TX_RX:
            state_str = busy_tx_rx_str;
            break;
        case HAL_UART_STATE_ERROR:
            return ERROR_ATOM;
        case HAL_UART_STATE_TIMEOUT:
            return TIMEOUT_ATOM;
        default:
            state_str = reset_str;
            break;
    }
    return globalcontext_make_atom(ctx->global, state_str);
}
